--- a/css.css
+++ b/css.css
@@ -88,11 +88,13 @@ nav ul {
 	padding-top: 25px;
 	transition: 0.2s;
 	text-align: center;
+	visibility:hidden;
 }
 
 nav:hover ul{
 	opacity: 1;
 	transition: 2s cubic-bezier(0.4, 0.3, 0.5, 1);
+	visibility: visible;
 }
 
 nav img {
@@ -121,6 +123,15 @@ nav li {
 	padding: 20px;
 	width: 0px;
 	height: 0px;
+}
+
+nav a{
+	visibility: hidden;
+	padding-bottom: 0px;
+}
+
+nav:hover a {
+	visibility: visible;
 }
 
 a {
