--- a/css.css
+++ b/css.css
@@ -123,8 +123,18 @@ nav li {
 	padding: 20px;
 	width: 0px;
 	height: 0px;
+	visibility: hidden;
 }
-
+nav:hover li {
+	list-style: none;
+	border-top: 2px double #0065DF;
+	display: inline;
+	margin-right: -4px;
+	padding: 20px;
+	width: 0px;
+	height: 0px;
+	visibility: visible;
+}
 nav a{
 	visibility: hidden;
 	padding-bottom: 0px;
